# SlicerIADR2015Testing

./: CMakeLists.txt
Download/: CMakeLists.txt  Download.py
SlicerIADR2015Testing/: CMakeLists.txt  SlicerIADR2015Testing.py
